<resources>
    <string name="app_name">Atividade14_01</string>
    <string name="my_name_ra">Gustavo Guimarães de Oliveira - 1110482313013</string>
    <string name="menu_exemplares">Exemplares</string>
    <string name="menu_alugueis">Aluguéis</string>
    <string name="menu_alunos">Alunos</string>

    <!-- Values Home -->
    <string name="tv_home">Biblioteca</string>

    <!-- Values  Alugueis-->
    <string name="tv_alugueis">Aluguéis</string>
    <string name="tv_dtRetirada">Data de Retirada</string>
    <string name="tv_dtDevolucao">Data de Devolução</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="btn_buscarAluguel">Buscar</string>

    <!-- Values  Exemplares-->
    <string name="tv_exemplares">Exemplares</string>
    <string name="et_codigo">Codigo</string>
    <string name="et_nomeExemplar">Nome</string>
    <string name="et_qtdPaginas">Páginas</string>
    <string name="rb_livro">Livro</string>
    <string name="rb_revista">Revista</string>
    <string name="et_isbn">ISBN</string>
    <string name="et_edicao">Edição</string>
    <string name="btn_buscarExemplar">Buscar</string>
    <string name="btn_inserirExemplar">Inserir</string>
    <string name="btn_modificarExemplar">Modificar</string>
    <string name="btn_excluirExemplar">Excluir</string>
    <string name="btn_listarExemplar">Listar</string>

    <!-- Values  Alunos-->
    <string name="tv_alunos">Alunos</string>
    <string name="et_ra">RA</string>
    <string name="btn_buscarAluno">Buscar</string>
    <string name="et_nomeAlunos">Nome</string>
    <string name="et_emailAluno">Email</string>
    <string name="btn_inserirAluno">Inserir</string>
    <string name="btn_modificarAluno">Modificar</string>
    <string name="btn_excluirAluno">Excluir</string>
    <string name="btn_listarAluno">Listar</string>

</resources>