<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlunosFragment">

    <TextView
        android:id="@+id/tvRaName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name_ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tv_alugueis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_alunos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/etRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_ra"
        android:inputType="text"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="117dp" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="111dp" />
</androidx.constraintlayout.widget.ConstraintLayout>